// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
<html>
  <head>
    <style
      data-emotion="css-global"
    >
      
      html{background-color:green;}
    </style>
  </head>
  <body>
    <div
      id="root"
    />
  </body>
</html>
`;

exports[`basic 2`] = `
<html>
  <head />
  <body>
    <div
      id="root"
    />
  </body>
</html>
`;
